# TimeSlicer

./: LICENSE  README.md  pyproject.toml
src/time_slicer/: time_slicer.py
src/time_slicer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_slicer.py
