[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "time_slicer"
version = "0.0.1"
authors = [
  { name="Haoran Sun", email="hrsun@cs.hku.hk" },
]
description = "A simple way to slice time into interval of fixed length. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AlanSunHR/TimeSlicer.git"
"Bug Tracker" = "https://github.com/AlanSunHR/TimeSlicer/issues"